--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color:rgba(255, 255, 255, 0.87)
+  color:rgba(255, 255, 255, 0.87);
+  margin: 0px;
 }
 
 button {
@@ -61,7 +62,6 @@ button:focus-visible {
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
 }
 
 .environment-selector {
@@ -70,6 +70,39 @@ button:focus-visible {
   padding: 10px;
   width: 500px;
   margin: 0 auto;
+}
+
+.size-selector {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  width: 500px;
+  margin: 0 auto;
+}
+
+.size-button {
+  flex: 1;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, transform 0.1s ease-in-out;
+  margin: 0 5px;
+  background-color: #f1f1f1;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.size-button:hover {
+  transform: scale(1.05);
+}
+
+.size-button.selected {
+  background-color: #007BFF;
+  color: white;
+}
+
+.size-button:focus {
+  outline: none;
 }
 
 .env-button {
@@ -147,8 +180,8 @@ button:focus-visible {
 
 .size-inputs {
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  justify-content: space-evenly;
+  margin-top: 5px;
   width: 500px; 
 }
 
@@ -161,8 +194,8 @@ button:focus-visible {
 }
 
 .size-inputs input {
-  margin-top: 5px;
   padding: 8px;
+  text-align: center;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
